--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,21 @@
 title: Your Blog
 SEOTitle: 你的博客 | Your Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: daystu@gmail.com
 description: ""
 keyword: ""
 url: "https://daystu.github.io/"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
-
+#baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "" 
 
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-#twitter_username:  huxpro
-facebook_username:  huxpro
+weibo_username:     daystu
+zhihu_username:     daystu
+github_username:    daystu
+#twitter_username:  daystu
+facebook_username:  daystu
 
 
 
