--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | Your Blog
+title: DayStu Blog
+SEOTitle: 好好学习 | DayStu Blog
 header-img: img/home-bg.jpg
 email: daystu@gmail.com
 description: ""
