--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: DayStudy Blog
 SEOTitle: 好好学习 | DayStudy Blog
-#header-img: img/home-bg.jpg
+header-img: img/home-bg.jpg
 email: daystu@gmail.com
 description: ""
 keyword: ""
