--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: DayStudy Blog
 SEOTitle: 好好学习 | DayStudy Blog
 header-img: img/home-bg.jpg
 email: daystu@gmail.com
-description: ""
+description: "这是一个测试"
 keyword: ""
 url: "https://daystu.github.io/"              # your host, for absolute URL
 #baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
@@ -66,9 +66,9 @@ ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 
 
 #侧边栏 个人信息介绍
-# Sidebar settings
-# sidebar: true                           # whether or not using Sidebar.
-# sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
 # sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -80,21 +80,21 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 
 
 # Friends
-friends: [
-    {
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
-    },{
-        title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
-        href: "#"
-    }
-]
+# friends: [
+    # {
+        # title: "Hux Blog",
+        # href: "http://huangxuan.me"
+    # },{
+        # title: "Foo",
+        # href: "#"
+    # },{
+        # title: "Bar",
+        # href: "#"
+    # },{
+        # title: "Example Friends",
+        # href: "#"
+    # },{
+        # title: "It helps SEO",
+        # href: "#"
+    # }
+# ]
