--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 
 
 #侧边栏 个人信息介绍
-Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+# Sidebar settings
+# sidebar: true                           # whether or not using Sidebar.
+# sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
 # sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
