--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Day Blog
 SEOTitle: 好好学习 | Day Blog
 header-img: img/home-bg.jpg
 email: daystu@gmail.com
-description: "这是一个测试"
+description: ""
 keyword: ""
 url: "https://daystu.github.io/"              # your host, for absolute URL
 #baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
