--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Day Blog
-SEOTitle: 好好学习 | Day Blog
+title: 小白入坑 
+SEOTitle: 好好学习 | 小白入坑 
 header-img: img/home-bg.jpg
 email: daystu@gmail.com
 description: ""
